# workshop-ia

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: workshop-01.ipynb  workshop-02.ipynb
src/: check_mnist.py  data.py
